Phew! Finished fixing all pages and fully migration to SQLAlch 2 style queries with sessions.

--- a/queertk/playground.ipynb
+++ b/queertk/playground.ipynb
@@ -28,7 +28,7 @@
     "from queertk.blueprints.artist.models import Artist\n",
     "from queertk.blueprints.production.models import Production\n",
     "\n",
-    "db_conn_string = 'mysql+mysqlconnector://i8leb9n99qu0:pscale_pw_XMiOc0SAIOe1mfZbXgVvxrWbjtye7xFsIG3iM_R2q90@pylkzqxt5vhc.us-east-1.psdb.cloud/qtdb'\n",
+    "db_conn_string = 'mysql+mysqlconnector://f2u1tc92sd26:pscale_pw_6ULHy_FyYQgeNl2bNImqFPrWxOSJcFCnDFgdH2v0_rE@pylkzqxt5vhc.us-east-1.psdb.cloud/qtdb'\n",
     "engine = create_engine(db_conn_string, future=True)\n",
     "Session = sessionmaker(engine, future=True)\n"
    ]
